[gd_scene load_steps=95 format=3 uid="uid://d1861mffx23x3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4gbii"]
[ext_resource type="Texture2D" uid="uid://cxc775sdhbrkv" path="res://sprites/Sonic/Sonic_Idle.png" id="2_bdc6g"]
[ext_resource type="Texture2D" uid="uid://bm531b1t3hbov" path="res://sprites/Sonic/Sonic_Fall_ExtraFrame.png" id="3_dtib8"]
[ext_resource type="Texture2D" uid="uid://dyqmt6lo4p8t3" path="res://sprites/Sonic/Sonic_Fall.png" id="3_f4tnd"]
[ext_resource type="Texture2D" uid="uid://h4rpgff5xnvc" path="res://sprites/Sonic/Sonic_Jump.png" id="3_kglvr"]
[ext_resource type="Texture2D" uid="uid://bsm0kirgl668k" path="res://sprites/Sonic/Sonic_Run1.png" id="4_wa8ko"]
[ext_resource type="Texture2D" uid="uid://cwy7vwwija3d2" path="res://sprites/Sonic/Sonic_Run2.png" id="5_gy2qp"]
[ext_resource type="Texture2D" uid="uid://n6kmmdo4yt2u" path="res://sprites/Sonic/Sonic_Walk1.png" id="5_xm7hb"]
[ext_resource type="Texture2D" uid="uid://d132waernf5o7" path="res://sprites/Sonic/Sonic_Skid.png" id="6_l6vnn"]
[ext_resource type="Texture2D" uid="uid://cmay528mhce4t" path="res://sprites/Sonic/Sonic_TurnFast.png" id="7_0djk6"]
[ext_resource type="Texture2D" uid="uid://brkwu04cla20o" path="res://sprites/Sonic/Sonic_Walk2.png" id="7_m7f2e"]
[ext_resource type="Texture2D" uid="uid://xgeyni06k8a6" path="res://sprites/Sonic/Sonic_TurnSlow.png" id="7_s4jmk"]
[ext_resource type="Script" path="res://scripts/player_sprite.gd" id="8_cyyry"]
[ext_resource type="Texture2D" uid="uid://dwsw4e68i531t" path="res://sprites/Sonic/Sonic_TurnFast_ExtraFrame.png" id="8_hglk2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qvehr"]
atlas = ExtResource("3_kglvr")
region = Rect2(66, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihev5"]
atlas = ExtResource("3_kglvr")
region = Rect2(99, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmb7q"]
atlas = ExtResource("3_f4tnd")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tnwc"]
atlas = ExtResource("3_f4tnd")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_87dcg"]
atlas = ExtResource("3_f4tnd")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_76l3d"]
atlas = ExtResource("3_f4tnd")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bbxe"]
atlas = ExtResource("3_f4tnd")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyarf"]
atlas = ExtResource("3_f4tnd")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a51e"]
atlas = ExtResource("3_f4tnd")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cnw8"]
atlas = ExtResource("3_f4tnd")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hey2"]
atlas = ExtResource("3_f4tnd")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7na6"]
atlas = ExtResource("3_f4tnd")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4jhk"]
atlas = ExtResource("3_f4tnd")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lglr"]
atlas = ExtResource("3_f4tnd")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa6su"]
atlas = ExtResource("2_bdc6g")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuc6j"]
atlas = ExtResource("2_bdc6g")
region = Rect2(33, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_un2t2"]
atlas = ExtResource("2_bdc6g")
region = Rect2(66, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf6l8"]
atlas = ExtResource("2_bdc6g")
region = Rect2(99, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj1y6"]
atlas = ExtResource("2_bdc6g")
region = Rect2(132, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_neeuv"]
atlas = ExtResource("2_bdc6g")
region = Rect2(165, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6ihc"]
atlas = ExtResource("2_bdc6g")
region = Rect2(198, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7koun"]
atlas = ExtResource("2_bdc6g")
region = Rect2(231, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_g130r"]
atlas = ExtResource("2_bdc6g")
region = Rect2(297, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0brx"]
atlas = ExtResource("2_bdc6g")
region = Rect2(330, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_g77hg"]
atlas = ExtResource("2_bdc6g")
region = Rect2(363, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4jgu"]
atlas = ExtResource("2_bdc6g")
region = Rect2(396, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yb4w"]
atlas = ExtResource("2_bdc6g")
region = Rect2(429, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_56lcq"]
atlas = ExtResource("3_kglvr")
region = Rect2(0, 33, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ted0"]
atlas = ExtResource("3_kglvr")
region = Rect2(33, 33, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lscyp"]
atlas = ExtResource("3_kglvr")
region = Rect2(66, 33, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knab1"]
atlas = ExtResource("3_kglvr")
region = Rect2(99, 33, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtcv0"]
atlas = ExtResource("3_kglvr")
region = Rect2(0, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw7jx"]
atlas = ExtResource("3_kglvr")
region = Rect2(33, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkvks"]
atlas = ExtResource("3_kglvr")
region = Rect2(66, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi2c7"]
atlas = ExtResource("3_kglvr")
region = Rect2(99, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iksu1"]
atlas = ExtResource("3_kglvr")
region = Rect2(33, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mif88"]
atlas = ExtResource("3_kglvr")
region = Rect2(66, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3psql"]
atlas = ExtResource("4_wa8ko")
region = Rect2(0, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_idnn2"]
atlas = ExtResource("4_wa8ko")
region = Rect2(65, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5jo6"]
atlas = ExtResource("4_wa8ko")
region = Rect2(130, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5ylo"]
atlas = ExtResource("4_wa8ko")
region = Rect2(195, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrj40"]
atlas = ExtResource("4_wa8ko")
region = Rect2(260, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mp8m"]
atlas = ExtResource("4_wa8ko")
region = Rect2(325, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_haixr"]
atlas = ExtResource("4_wa8ko")
region = Rect2(390, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cd06"]
atlas = ExtResource("4_wa8ko")
region = Rect2(455, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_knbnw"]
atlas = ExtResource("5_gy2qp")
region = Rect2(260, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_q58fo"]
atlas = ExtResource("5_gy2qp")
region = Rect2(325, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhug6"]
atlas = ExtResource("5_gy2qp")
region = Rect2(390, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw1eb"]
atlas = ExtResource("5_gy2qp")
region = Rect2(455, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4dih"]
atlas = ExtResource("5_gy2qp")
region = Rect2(0, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qley2"]
atlas = ExtResource("5_gy2qp")
region = Rect2(65, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyt6c"]
atlas = ExtResource("5_gy2qp")
region = Rect2(130, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_miyry"]
atlas = ExtResource("5_gy2qp")
region = Rect2(195, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_sap0j"]
atlas = ExtResource("6_l6vnn")
region = Rect2(0, 0, 40, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xues"]
atlas = ExtResource("6_l6vnn")
region = Rect2(41, 0, 40, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsdry"]
atlas = ExtResource("7_0djk6")
region = Rect2(0, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvtg7"]
atlas = ExtResource("7_0djk6")
region = Rect2(32, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w67h6"]
atlas = ExtResource("8_hglk2")
region = Rect2(0, 0, 44, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xjb5"]
atlas = ExtResource("7_0djk6")
region = Rect2(64, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3quec"]
atlas = ExtResource("7_s4jmk")
region = Rect2(0, 0, 30, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_47eho"]
atlas = ExtResource("7_s4jmk")
region = Rect2(35, 0, 30, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgeys"]
atlas = ExtResource("5_xm7hb")
region = Rect2(0, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_muis6"]
atlas = ExtResource("5_xm7hb")
region = Rect2(65, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr3wq"]
atlas = ExtResource("5_xm7hb")
region = Rect2(130, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntaqw"]
atlas = ExtResource("5_xm7hb")
region = Rect2(195, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi78i"]
atlas = ExtResource("5_xm7hb")
region = Rect2(260, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_iykfv"]
atlas = ExtResource("5_xm7hb")
region = Rect2(325, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmcrt"]
atlas = ExtResource("5_xm7hb")
region = Rect2(390, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjj20"]
atlas = ExtResource("5_xm7hb")
region = Rect2(455, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7dfi"]
atlas = ExtResource("7_m7f2e")
region = Rect2(0, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocy64"]
atlas = ExtResource("7_m7f2e")
region = Rect2(65, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctqgr"]
atlas = ExtResource("7_m7f2e")
region = Rect2(130, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gv1l"]
atlas = ExtResource("7_m7f2e")
region = Rect2(195, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_454hg"]
atlas = ExtResource("7_m7f2e")
region = Rect2(260, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkpef"]
atlas = ExtResource("7_m7f2e")
region = Rect2(325, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_aph16"]
atlas = ExtResource("7_m7f2e")
region = Rect2(390, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3qmc"]
atlas = ExtResource("7_m7f2e")
region = Rect2(455, 0, 64, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_0sqsy"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_qvehr")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ihev5")
}, {
"duration": 1.0,
"texture": ExtResource("3_dtib8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmb7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tnwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87dcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76l3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bbxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyarf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a51e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cnw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hey2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7na6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4jhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lglr")
}],
"loop": true,
"name": &"Fall",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmb7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tnwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87dcg")
}],
"loop": true,
"name": &"Fall (Loop)",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa6su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuc6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un2t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf6l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj1y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neeuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6ihc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7koun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa6su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuc6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un2t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf6l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj1y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neeuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g130r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0brx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa6su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuc6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un2t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf6l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj1y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neeuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6ihc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7koun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa6su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuc6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un2t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf6l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g77hg")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_i4jgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yb4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4jgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yb4w")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_i4jgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g77hg")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56lcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ted0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lscyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knab1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtcv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw7jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkvks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi2c7")
}],
"loop": true,
"name": &"Jump",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iksu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mif88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtcv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw7jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkvks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi2c7")
}],
"loop": true,
"name": &"Jump (Start)",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3psql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idnn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5jo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5ylo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrj40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mp8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haixr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cd06")
}],
"loop": true,
"name": &"Run1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_knbnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q58fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhug6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw1eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4dih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qley2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyt6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miyry")
}],
"loop": true,
"name": &"Run2",
"speed": 23.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sap0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xues")
}],
"loop": true,
"name": &"Skid",
"speed": 15.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_bsdry")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xvtg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w67h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xjb5")
}],
"loop": true,
"name": &"Turn (Fast)",
"speed": 20.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_3quec")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_47eho")
}],
"loop": true,
"name": &"Turn (Slow)",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgeys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muis6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr3wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntaqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi78i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iykfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmcrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjj20")
}],
"loop": true,
"name": &"Walk1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7dfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocy64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctqgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gv1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_454hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkpef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aph16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3qmc")
}],
"loop": true,
"name": &"Walk2",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbco7"]
size = Vector2(20, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ak3j0"]

[node name="Player" type="CharacterBody2D"]
floor_constant_speed = true
floor_max_angle = 1.55334
floor_snap_length = 25.0
script = ExtResource("1_4gbii")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_0sqsy")
animation = &"Walk1"
script = ExtResource("8_cyyry")

[node name="Collision (Normal)" type="CollisionShape2D" parent="."]
position = Vector2(4.47035e-07, -15.5)
shape = SubResource("RectangleShape2D_mbco7")

[node name="Collision (Jump)" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, -16)
shape = SubResource("RectangleShape2D_ak3j0")

[node name="RayCast" type="RayCast2D" parent="."]
position = Vector2(-10, -16)
exclude_parent = false
target_position = Vector2(0, 30)
collision_mask = 2

[node name="RayCast2" type="RayCast2D" parent="."]
position = Vector2(10, -16)
exclude_parent = false
target_position = Vector2(0, 30)
collision_mask = 2

[node name="RayCast3" type="RayCast2D" parent="."]
position = Vector2(0, -16)
exclude_parent = false
target_position = Vector2(0, 55)
collision_mask = 2

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -35)
position_smoothing_speed = 30.0
rotation_smoothing_speed = 50.0

[connection signal="animation_looped" from="Sprite" to="Sprite" method="_on_animation_looped"]
